--- a/style.css
+++ b/style.css
@@ -1,23 +1,36 @@
 body {
     width: 650px;
     margin: auto !important;
+    font-family: 'Jost', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
 }
 header {
     text-align: center;
 }
+.q-span {
+    position: relative;
+    bottom: 10px;
+    margin-bottom: 10px;
+}
+section {
+    margin-bottom:25px ;
+}
 .secOne, .con-div {
-    background-color: blue;
+    background-color: #d7f0e1;
+    color: #074544;
     text-align: center;
 }
 .pregnancy-h{
     text-align: center;
-    background-color: rgb(145, 141, 141);
+    background-color: #133729;
+    color: #fff;
     padding: 7px;
-    font-size: 1.5rem;
+    font-size: 1.2em;
 }
 .myBaby, .myBaby-h {
     text-align: center;
-    font-size: 1.7rem;
+    color: #133729;
+    font-size: 1.4rem;
     padding-top: 20px;
 }
 .myBaby-h {
@@ -25,9 +38,10 @@ header {
     line-height: 4px;
 }
 .week, .week-h {
+    color: #133729;
     font-size: 3rem;
     text-align: center;
-    font-weight: 600;
+    font-weight: 800;
     line-height: 4px;
     /* margin-top: -20px; */
 }
@@ -37,12 +51,12 @@ header {
 .readMore, .readMore-s {
     padding: 8px;
     border-radius: 5px;
-    background-color: green;
+    background-color: #133729;
     border: none;
     margin-bottom: 10px;
 }
 .readMore-s {
-    background-color: brown;
+    background-color: #eb7575;
 }
 a {
     text-decoration: none;
@@ -54,11 +68,12 @@ a {
     text-align: center;
 }
 h4 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 .questions {
     display: flex;
     gap: 25px;
+    align-items: center;
     margin-bottom: 10px;
 }
 h5{
@@ -66,14 +81,14 @@ h5{
     text-align: center;
 }
 .doYou {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
 }
 .burning {
     background-color: white;
     padding: 20px;
 }
 .secSeven {
-    background-color: blue;
+    background-color: #d7f0e1;
     padding: 15px;
 }
 
@@ -95,14 +110,20 @@ footer {
     body {
         width: 100%;
     }
-    .week, .week-h {
-        font-size: 2.5rem;
+    .week {
+        font-size: 2rem;
         text-align: center;
         font-weight: 600;
-        line-height: 4px;
-        /* margin-top: -20px; */
+        /* line-height: 4px; */
+        margin-top: -10px;
     }
     .week-h {
-        font-size: 2.2rem;
+        font-size: 1.5rem;
+        /* margin-top: 15px; */
+    }
+    .myBaby-h {
+        text-align: center;
+        font-size: 1.4rem;
+        padding-top: 0px;
     }
 }
